--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "./src/train/train.py",
             "console": "integratedTerminal",
             "args": [
-                "./input/train/train.dat", "sxa", "dt"
+                "./input/train/train.dat", "./output/train/tree_node.p", "dt"
             ]
         }
     ]
