--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,17 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [{
+            "name": "Test",
+            "type": "python",
+            "request": "launch",
+            "program": "./src/test/test.py",
+            "console": "integratedTerminal",
+            "args": [
+                "./output/train/tree_node.p", "./input/test/test.dat"
+            ]
+        },
+
         {
             "name": "Train DT",
             "type": "python",
