--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,18 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
+    "configurations": [
+        {
+            "name": "Test ADA",
+            "type": "python",
+            "request": "launch",
+            "program": "./src/test/test.py",
+            "console": "integratedTerminal",
+            "args": [
+                "./output/train/ada_node.p", "./input/test/test.dat"
+            ]
+        },
+        {
             "name": "Train ADA",
             "type": "python",
             "request": "launch",
@@ -14,7 +25,7 @@
             ]
         },
         {
-            "name": "Test",
+            "name": "Test DT",
             "type": "python",
             "request": "launch",
             "program": "./src/test/test.py",
@@ -23,7 +34,6 @@
                 "./output/train/tree_node.p", "./input/test/test.dat"
             ]
         },
-
         {
             "name": "Train DT",
             "type": "python",
